2003-02-08  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/libnr/nr-gradient.c (nr_rgradient_render_generic_symmetric): Special
	case NR_PIXBLOCK_MODE_R8G8B8A8N and full opacity

	* src/sp-gradient.c (sp_radialgradient_set): Initialize focal point to center if unset

	* src/libnr/nr-gradient.c (nr_lgradient_render_R8G8B8A8N): Special-cased full opacity

	* configure.in: 0.30.1

	* src/libnrtype/nr-rasterfont.c (nr_rasterfont_ensure_glyph_slot): Use
	32 bit integer bbox initially before deciding whether it fits in 16 bit

2003-02-08  gettextize  <bug-gnu-gettext@gnu.org>

	* Makefile.am (SUBDIRS): Add intl, m4.
	(EXTRA_DIST): Add config.rpath.
	* configure.in (AC_OUTPUT): Add intl/Makefile, po/Makefile.in, m4/Makefile.

2003-02-07  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/help.c (sp_help_about): Make default window size the same as document

	* src/style.c: Use custom winding rule and stroke parameter enumerations

	* src/enums.h: Define winding rules and stroke parameters

2003-02-06  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/sp-rect.c (sp_rect_rx_set): Set ::set value(s)
	(sp_rect_ry_set): Ditto

	* src/sp-item.c (sp_item_update): Set arena item transform here

	* src/dialogs/fill-style.c (sp_fill_style_widget_update_repr): Made non-recursive
	(sp_fill_style_widget_update): Ditto

	* src/sp-shape.c (sp_shape_write_transform): Working path tranformation optimizer

	* src/widgets/sp-color-slider.c (sp_color_slider_adjustment_value_changed): Add
	some extra pixels around arrow dirtified area
	(sp_color_slider_paint): Use gtk_draw_box instead of gtk_draw_shadow
	(sp_color_slider_realize): Attach style

2003-02-04  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/sodipodi.c (sodipodi_load_config): Generic method by Bryce
	(sodipodi_load_preferences): Frontend, same
	(sodipodi_load_extensions): Ditto
	(sodipodi_get_repr): Test for "extensions"
	(sodipodi_init_config): Generic method by Bryce
	(sodipodi_init_preferences): Frontend by Bryce