@@ -328,8 +328,7 @@ nr_arena_shape_render (NRArenaItem *item, NRRectL *area, NRPixBlock *pb, unsigne
 				NRPixBlock cb;
 				/* Need separate gradient buffer */
 				nr_pixblock_setup_fast (&cb, NR_PIXBLOCK_MODE_R8G8B8A8N, area->x0, area->y0, area->x1, area->y1, TRUE);
-				shape->fill_painter->fill (shape->fill_painter, NR_PIXBLOCK_PX (&cb),
-							   area->x0, area->y0, area->x1 - area->x0, area->y1 - area->y0, cb.rs);
+				shape->fill_painter->fill (shape->fill_painter, &cb);
 				cb.empty = FALSE;
 				/* Composite */
 				nr_blit_pixblock_pixblock_mask (pb, &cb, &m);
@@ -364,8 +363,7 @@ nr_arena_shape_render (NRArenaItem *item, NRRectL *area, NRPixBlock *pb, unsigne
 				NRPixBlock cb;
 				/* Need separate gradient buffer */
 				nr_pixblock_setup_fast (&cb, NR_PIXBLOCK_MODE_R8G8B8A8N, area->x0, area->y0, area->x1, area->y1, TRUE);
-				shape->stroke_painter->fill (shape->stroke_painter, NR_PIXBLOCK_PX (&cb),
-							     area->x0, area->y0, area->x1 - area->x0, area->y1 - area->y0, cb.rs);
+				shape->stroke_painter->fill (shape->stroke_painter, &cb);
 				cb.empty = FALSE;
 				/* Composite */
 				nr_blit_pixblock_pixblock_mask (pb, &cb, &m);
