@@ -20,7 +20,7 @@ static void sp_paint_server_init (SPPaintServer *ps);
 
 static void sp_paint_server_release (SPObject *object);
 
-static void sp_painter_stale_fill (SPPainter *painter, guchar *px, gint x0, gint y0, gint width, gint height, gint rowstride);
+static void sp_painter_stale_fill (SPPainter *painter, NRPixBlock *pb);
 
 static SPObjectClass *parent_class;
 static GSList *stale_painters = NULL;
@@ -153,12 +153,9 @@ sp_painter_free (SPPainter *painter)
 }
 
 static void
-sp_painter_stale_fill (SPPainter *painter, guchar *px, gint x0, gint y0, gint width, gint height, gint rowstride)
+sp_painter_stale_fill (SPPainter *painter, NRPixBlock *pb)
 {
-	NRPixBlock pb;
-	nr_pixblock_setup_extern (&pb, NR_PIXBLOCK_MODE_R8G8B8A8N, x0, y0, x0 + width, y0 + height, px, rowstride, FALSE, FALSE);
-	nr_pixblock_render_gray_noise (&pb, NULL);
-	nr_pixblock_release (&pb);
+	nr_pixblock_render_gray_noise (pb, NULL);
 }
 
 
